--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,9 +26,12 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Show text of file testfile
-        run: cat testfile
+      - name: deploy terraform main.tf
+        run: |
+          terraform init
+          terraform apply
 
+        
       # Runs a set of commands using the runners shell
 #      - name: Run a multi-line script
 #        run: |
